--- a/style3.css
+++ b/style3.css
@@ -1,6 +1,6 @@
 #container{
-    height:400px;
-    width:400px;
+    height:600px;
+    width:500px;
     border:2px solid lightseagreen;
     background-color: white;
     display: flex;
@@ -9,40 +9,47 @@
     justify-content:space-evenly ;
     align-items: center;
     border-radius: 20px;
+    color:azure
     
     
 }
 
 .box{
     height:100px;
-    width:100px;
+    width:150px;
     border:2px solid black;
     background-color: grey;
-    font-size: 51px;
+    font-size: 15px;
     text-align: center;
     border-radius:10px;
 
 }
 #navbar{
-    height:100px;
-    width:200;
+    height:180px;
+    width:150s;
     border:2px solid black;
     background-color: pink;
     border-radius: 10px;
     display: flex;
-justify-content: flex-start;
+justify-content: center;
 
 
 
 }
 .option{
-    height:50px;
-    width:80px;
-    border-radius:10px;
-    margin-left:6px;
-    font-size:28px;
-    line-height:50px;
+    height:10s0px;
+    width:100px;
+    border-radius:20px;
+    margin-left:50px;
+    font-size:18px;
+    line-height:28px;
+    
+
 }
 h1{
     text-decoration: underline red;
+}
+p{
+    color:red;
+    font-size: 25px;
 }
